--- a/README
+++ b/README
@@ -1,4 +1,8 @@
 BestSell Shopping Website
+Hooks are JavaScript functions, but they impose two additional rules:
+
+Only call Hooks at the top level. Don't call Hooks inside loops, conditions, or nested functions.
+Only call Hooks from React function components. Don't call Hooks from regular JavaScript functions. 
 1.Build the home page:
     a.header and footer:
         i.header - BestSell title on the left, suitable padding left;
